--- a/build-action/action.yaml
+++ b/build-action/action.yaml
@@ -3,10 +3,10 @@ description: 'Build and push Docker image for each platform.'
 
 inputs:
   oci_registry_username:
-    description: 'DockerHub username'
+    description: 'oci registry username'
     required: true
   oci_registry_password:
-    description: 'DockerHub password'
+    description: 'oci registry password'
     required: true
   ociBlocks:
     description: 'OCI blocks to build example: dev, runtime'
@@ -27,12 +27,6 @@ runs:
 
     - name: Checkout
       uses: actions/checkout@v4
-
-    - name: Download meta bake definition
-      uses: actions/download-artifact@v4
-      with:
-        name: bake-meta
-        path: /tmp
 
     - name: Login to Docker Hub
       uses: docker/login-action@v3
