fix Remove Digest After Custom Runner Execution #1
Signed-off-by: Horiodino <holiodin@gmail.com>

--- a/build-action/action.yaml
+++ b/build-action/action.yaml
@@ -70,3 +70,8 @@ runs:
         path: /tmp/digests/*
         if-no-files-found: error
         retention-days: 1
+  
+    - name : Post Checkout Digests
+      shell: bash
+      run: |
+        sudo rm -rf /tmp/digests
