--- a/build-action/action.yaml
+++ b/build-action/action.yaml
@@ -15,6 +15,10 @@ inputs:
     description: 'The directory to operate in. Defaults to root of the repository.'
     required: false
     default: '.'
+  registry:
+    description: 'The registry to push the image to.'
+    required: false
+    default: 'docker.io'
 
 runs:
   using: 'composite'
@@ -31,6 +35,7 @@ runs:
     - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
+        registry: ${{ inputs.registry }}
         username: ${{ inputs.oci_registry_username }}
         password: ${{ inputs.oci_registry_password }}
 
